--- a/mics-whales.ipynb
+++ b/mics-whales.ipynb
@@ -8364,6 +8364,76 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.random.poisson(lam=0.9)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def birth_t_i(\n",
+    "    _mature_t_i, \n",
+    "    _yspb_t_i, \n",
+    "    sampler_yspb_integer=np.random.poisson,\n",
+    "    sampling_args_yspb_integer={\n",
+    "        'pos_args': [3.5]\n",
+    "    },\n",
+    "    sampler_yspb_none=np.random.binomial,\n",
+    "    sampling_args_yspb_none={\n",
+    "        'pos_args': [1, 0.5]\n",
+    "    }\n",
+    "):\n",
+    "    if _mature_t_i == 0:\n",
+    "        return 0\n",
+    "    elif _yspb_t_i == None:\n",
+    "        return sampler_yspb_none(*sampling_args_yspb_none)\n",
+    "    elif _yspb_t_i >= 0:\n",
+    "        # Given the prior values of the binomial, find the value of the pdf at _yspb_t_i - 2\n",
+    "        # have a bernoulli sample with that probability\n",
+    "        \n",
+    "        # yspb \n",
+    "        return 2 + sampler_yspb_integer(*sampling_args_yspb_integer['pos_args']) <= _yspb_t_i"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 106,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "birth_t_i(1,3)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
