use categorical likelihood

--- a/mics-whales-new.ipynb
+++ b/mics-whales-new.ipynb
@@ -8562,16 +8562,18 @@
     "    p['birth_2005'] = pm.Bernoulli('birth_2005', p=p['proba_birth'][0], observed=0)\n",
     "    p['detect_2005'] = pm.Bernoulli('detect_2005', p=p['proba_detect'][0], observed=1)\n",
     "    \n",
+    "\n",
     "    p1 = p['proba_alive'][0] * (1 - p['proba_birth'][0]) * p['proba_detect'][0]\n",
-    "    \n",
-    "    \n",
+    "    p2 = p['proba_alive'][0] * p['proba_birth'][0] * p['proba_detect'][0]\n",
+    "    p0 = 1 - p1 - p2\n",
     "    \n",
     "    pm.Bernoulli(\n",
     "        'obs',\n",
     "        p=[\n",
+    "            p0,\n",
     "            p1,\n",
-    "#             p2\n",
-    "        ],\n",
+    "            p2\n",
+    "#                     ],\n",
     "        observed=[1]\n",
     "        \n",
     "    )\n",
