--- a/mics-whales-new.ipynb
+++ b/mics-whales-new.ipynb
@@ -9162,7 +9162,7 @@
       "INFO (theano.gof.compilelock): Refreshing lock /Users/eddericugaddan/.theano/compiledir_Darwin-18.5.0-x86_64-i386-64bit-i386-3.7.3-64/lock_dir/lock\n",
       "Multiprocess sampling (4 chains in 4 jobs)\n",
       "NUTS: [age_2004_H002-3229, proba_birth_2004_H002-3229, proba_intro_2004_H002-3229, proba_alive_2004_H002-3229, beta_detect_2016, beta_birth_2016, beta_introduce_2016, beta_alive_2016, beta_detect_2015, beta_birth_2015, beta_introduce_2015, beta_alive_2015, beta_detect_2014, beta_birth_2014, beta_introduce_2014, beta_alive_2014, beta_detect_2013, beta_birth_2013, beta_introduce_2013, beta_alive_2013, beta_detect_2012, beta_birth_2012, beta_introduce_2012, beta_alive_2012, beta_detect_2011, beta_birth_2011, beta_introduce_2011, beta_alive_2011, beta_detect_2010, beta_birth_2010, beta_introduce_2010, beta_alive_2010, beta_detect_2009, beta_birth_2009, beta_introduce_2009, beta_alive_2009, beta_detect_2008, beta_birth_2008, beta_introduce_2008, beta_alive_2008, beta_detect_2007, beta_birth_2007, beta_introduce_2007, beta_alive_2007, beta_detect_2006, beta_birth_2006, beta_introduce_2006, beta_alive_2006, beta_detect_2005, beta_birth_2005, beta_introduce_2005, beta_alive_2005, beta_already_introduced, negative_alpha]\n",
-      "Sampling 4 chains:   5%|▌         | 415/8000 [01:55<54:35,  2.32draws/s]  "
+      "Sampling 4 chains:  14%|█▍        | 1128/8000 [05:57<1:04:01,  1.79draws/s]"
      ]
     }
    ],
