add model comparison

--- a/mics-whales-new.ipynb
+++ b/mics-whales-new.ipynb
@@ -11296,6 +11296,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Results"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 124,
    "metadata": {},
@@ -11328,11 +11335,180 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Model Comparison"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "with open(\"data/model_1_beta_mu_10_sd_1/model_nan-new cow 2016.pkl\", 'rb') as buff:\n",
+    "    data = pickle.load(buff)  \n",
+    "\n",
+    "one_beta_birth_per_year_model, one_beta_birth_per_year_trace = data['model'], data['trace']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 131,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"data/model_2_simple_non_time_varying/model_simple_nan-new cow 2016.pkl\", 'rb') as buff:\n",
+    "    data = pickle.load(buff)  \n",
+    "\n",
+    "one_beta_birth_model, one_beta_birth_trace = data['model'], data['trace']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 138,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/edderic/miniconda3/envs/mics-whales/lib/python3.7/site-packages/pymc3/stats.py:167: FutureWarning: arrays to stack must be passed as a \"sequence\" type such as list or tuple. Support for non-sequence iterables such as generators is deprecated as of NumPy 1.16 and will raise an error in the future.\n",
+      "  return np.stack(logp)\n"
+     ]
+    }
+   ],
+   "source": [
+    "one_beta_birth_yer_year_model_waic = pm.waic(one_beta_birth_per_year_trace, one_beta_birth_per_year_model)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 139,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10.966862424695353"
+      ]
+     },
+     "execution_count": 139,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "one_beta_birth_yer_year_model_waic.WAIC"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 140,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/edderic/miniconda3/envs/mics-whales/lib/python3.7/site-packages/pymc3/stats.py:167: FutureWarning: arrays to stack must be passed as a \"sequence\" type such as list or tuple. Support for non-sequence iterables such as generators is deprecated as of NumPy 1.16 and will raise an error in the future.\n",
+      "  return np.stack(logp)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "13.9575640884843"
+      ]
+     },
+     "execution_count": 140,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "one_beta_birth_model_waic = pm.waic(one_beta_birth_trace, one_beta_birth_model)\n",
+    "one_beta_birth_model_waic.WAIC"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 146,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>WAIC</th>\n",
+       "      <th>pWAIC</th>\n",
+       "      <th>dWAIC</th>\n",
+       "      <th>weight</th>\n",
+       "      <th>SE</th>\n",
+       "      <th>dSE</th>\n",
+       "      <th>var_warn</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>10.97</td>\n",
+       "      <td>0.35</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5.07</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>13.96</td>\n",
+       "      <td>0.69</td>\n",
+       "      <td>2.99</td>\n",
+       "      <td>0</td>\n",
+       "      <td>6.93</td>\n",
+       "      <td>2.16</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    WAIC pWAIC dWAIC weight    SE   dSE var_warn\n",
+       "0  10.97  0.35     0      1  5.07     0        0\n",
+       "1  13.96  0.69  2.99      0  6.93  2.16        0"
+      ]
+     },
+     "execution_count": 146,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pm.compare({\n",
+    "    one_beta_birth_per_year_model: one_beta_birth_per_year_trace, \n",
+    "    one_beta_birth_model: one_beta_birth_trace  \n",
+    "})"
+   ]
   }
  ],
  "metadata": {
